Update shared code.

--- a/x360ce.Engine/JocysCom/Controls/InfoControl.xaml
+++ b/x360ce.Engine/JocysCom/Controls/InfoControl.xaml
@@ -47,14 +47,18 @@
 				Padding="0"
 				Content="{StaticResource Icon_Information}"
 				Focusable="False" />
-			<TextBlock
+			<TextBox
 				Name="BodyLabel"
 				Grid.Row="1"
 				Grid.Column="1"
 				Margin="3,0,3,3"
 				Padding="0"
-				VerticalAlignment="Top"
+				VerticalAlignment="Center"
 				x:FieldModifier="public"
+				Background="Transparent"
+				Focusable="False"
+				IsReadOnly="True"
+				MaxLines="2"
 				Text="[BodyLabel]"
 				TextWrapping="Wrap" />
 			<ContentControl
