--- a/x360ce.App.Beta/Controls/UserDevicesControl.xaml
+++ b/x360ce.App.Beta/Controls/UserDevicesControl.xaml
@@ -8,6 +8,7 @@
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	d:DesignHeight="100"
 	d:DesignWidth="720"
+	Background="{StaticResource BackgroundLight}"
 	Loaded="UserControl_Loaded"
 	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
@@ -31,7 +32,7 @@
 				</StackPanel>
 			</Button>
 			<Menu x:Name="HidGuardianMenu" VerticalAlignment="Center">
-				<MenuItem Margin="3,3,3,3" Padding="3,3,3,3" Header="HID Guardian">
+				<MenuItem Margin="0,3,0,3" Padding="3" Header="HID Guardian">
 					<MenuItem.Icon>
 						<ContentControl Content="{StaticResource Icon_shield}" />
 					</MenuItem.Icon>
@@ -65,13 +66,13 @@
 		</StackPanel>
 
 		<StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
-			<Button Name="DeleteButton" Click="DeleteButton_Click">
+			<Button Name="DeleteButton" Margin="0,3,3,3" Click="DeleteButton_Click">
 				<StackPanel>
 					<ContentControl Content="{StaticResource Icon_Delete}" />
 					<Label Content="Delete" />
 				</StackPanel>
 			</Button>
-			<Button Name="RefreshButton" Click="RefreshButton_Click">
+			<Button Name="RefreshButton" Click="RefreshButton_Click" Margin="0,3,3,3">
 				<StackPanel>
 					<ContentControl Content="{StaticResource Icon_Refresh}" />
 					<Label Content="Refresh" />
